src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

#page-container {
  position: relative;
  min-height: 100vh;
}
#content-wrap {
  padding-bottom: 2.5rem; /* Footer height */
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  line-height: 2.5rem; /* Vertically center the text there */
  background-color: #303030;
}

.Svg-logo {
  display: flex;
  justify-content: center;
  align-items: center;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.react-logo {
  margin-top: 20;
}

.Homepage .btn-block {
  padding: 1% 0;
  font-size: 1.5vw;
}

.NNImage {
  background-color: whitesmoke;
  border-radius: 5%;
}

.NNImage > img {
  width: 45%;
  height: auto;
}

